--- a/src/components/Home/styles/SearchBar.module.css
+++ b/src/components/Home/styles/SearchBar.module.css
@@ -1,14 +1,14 @@
 .searchBar{
-    background: white;
-    padding-right: 20px;
-    flex: 1;
+    /* flex: 0; */
 }
 .searchBar input {
     padding: 10px;
-    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+    width: 350px;
+    color: black;
+    background-color: white;
+    box-shadow: 0px 1px 1px rgb(145, 167, 255);
     border-radius: 3px;
     border: none;
-    width: 100%;
 }
 .searchBar input:focus{
     outline: none;
