--- a/src/components/Home/styles/Home.module.css
+++ b/src/components/Home/styles/Home.module.css
@@ -39,6 +39,14 @@
     border-radius: 3px;
 }
 
+.Home_Buttons button:disabled,
+button[disabled] {
+    border: 1px solid #999999;
+    background-color: #cccccc;
+    color: #666666;
+    pointer-events: none;
+}
+
 .Home_Navbar {
     /* flex: 1; */
     top: 70px;
